squishing more bugs but also have new issues with debugger and some apis. pushing to the heroku app i posted for testing in development

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -96,8 +96,17 @@ li img{
   width: 110px;
 }
 
+li.bronx{
+  top: 0px;
+  width: 40px;
+
+}
+
+
+
 .subheader{
 /*  color: red;*/
+border: 2px solid black;
   position: relative;
   margin: 0 auto;
   top: 4px;
